// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField> renders correctly 1`] = `
<Fragment>
  <InputField
    error={false}
    label="label"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    type="text"
    value="value"
  />
</Fragment>
`;

exports[`<InputField> renders errors correctly 1`] = `
<Fragment>
  <InputField
    error={true}
    label="label"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    type="text"
    value="value"
  />
  <Help
    error={true}
  >
    error
  </Help>
</Fragment>
`;
